[gd_scene load_steps=2 format=3 uid="uid://bw7nx6o0hres3"]

[ext_resource type="Script" uid="uid://dtpx0m42eofil" path="res://scenes/menus_pause/pause_player_character_panel.gd" id="1_fregk"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fregk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alice"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Lv. "

[node name="LabelLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
text = "HP"

[node name="LabelHPCurrent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelHPMax" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="ProgressBarHP" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
text = "MP"

[node name="LabelMPCurrent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="LabelMPMax" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "9999"

[node name="ProgressBarMP" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
show_percentage = false
